# reversePY

./: README.md  cwallet_debug.log.1  cwallet_debug.log.2  cwallet_debug.log.3  main.py  pyproject.toml  unique_senders_solana.txt
Data/: manual.txt
data/: btc_explored.txt  btc_filtered.txt  btc_manual.txt  btc_new_inner_addresses.txt  btc_to_explore.txt  btc_unfiltered.txt  manual.txt  my_transactions.txt  owner_addresses.txt  results_eth.txt  results_eth_two.txt  unique_senders_alchemy.txt  unique_senders_alchemy_arb.txt  unique_senders_alchemy_base.txt  unique_senders_alchemy_op.txt  unique_senders_alchemy_poly.txt  unique_senders_alchemy_zksync.txt  unique_senders_covalent_bep.txt  unique_senders_eth.txt  unique_senders_moralis.txt  unique_senders_opbnb.txt  unique_senders_solana.txt  unique_senders_tron.txt
info/: my_transactions.txt  numbers_result.txt  owner_addresses.txt
scripts/: attack.py  bnb.py  coin.py  eth.py  explorer.py  main.py  parse.py  parse_results.py  post.py  proxy.py  script.py  test.py  utils.py
scripts/addresses/: __init__.py  bnb_covalent.py  btc_explorer.py  eth_alchemy.py  eth_alchemy_transfers.py  opbnb.py  opbnb_alchemy.py  solana.py  solana_alchemy.py  tron.py
