[project]
name = "reversepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocsv>=1.4.0",
    "aiofiles>=25.1.0",
    "aiorpcx>=0.25.0",
    "bech32>=1.2.0",
    "bitcoin>=1.1.42",
    "httpx[http2]>=0.28.1",
    "pycryptodome>=3.23.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
